feat: upload excel sales contract

--- a/debits/templates/lot/list.html
+++ b/debits/templates/lot/list.html
@@ -18,6 +18,9 @@
         <a href="{% url 'lot_create' enterprise.id %}" class="btn btn-smart" style="width: 150px;">
             Novo
         </a>
+        <a href="{% url 'sales_contract_upload' enterprise.id %}" class="btn btn-outline-dark" style="width: 150px;">
+            Subir planilha
+        </a>
     </div>
 
 </div>
