--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -4,7 +4,7 @@
 <!-- SIDEBAR -->
 <div class="collapse collapse-horizontal show" id="collapseSidebar">
 
-    <div class="m-0 border-end border-bottom bg-white min-vh-100 py-3 sticky-top">
+    <div class="m-0 border-end border-bottom bg-smart-subtle min-vh-100 py-3 sticky-top">
 
         <!-- ACCORDION -->
         <div class="accordion accordion-flush" id="accordionSidebar">
@@ -12,9 +12,9 @@
             <!-- ACCORDION ITEM -->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <a class="accordion-button fs-6 fw-light collapsed text-decoration-none" href=""
+                    <a class="accordion-button bg-smart-subtle text-white-50 fs-6 fw-light collapsed text-decoration-none" href=""
                         data-bs-toggle="collapse" data-bs-target="#collapse-debits" aria-controls="collapse-debits">
-                        <span class="material-symbols-outlined me-2 fw-light text-secondary">
+                        <span class="material-symbols-outlined me-2 fw-light text-white-50">
                             location_city
                         </span>
                         Controle de débitos
@@ -46,10 +46,10 @@
             <!-- ACCORDION ITEM -->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <a class="accordion-button fs-6 fw-light collapsed text-decoration-none" href=""
+                    <a class="accordion-button bg-smart-subtle text-white-50 fs-6 fw-light collapsed text-decoration-none" href=""
                         data-bs-toggle="collapse" data-bs-target="#collapse-customers"
                         aria-controls="collapse-customers">
-                        <span class="material-symbols-outlined me-2 fw-light text-secondary">
+                        <span class="material-symbols-outlined me-2 fw-light text-white-50">
                             groups
                         </span>
                         Clientes e Fornecedores
@@ -75,9 +75,9 @@
             <!-- ACCORDION ITEM -->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <a class="accordion-button fs-6 fw-light collapsed text-decoration-none" href=""
+                    <a class="accordion-button bg-smart-subtle text-white-50 fs-6 fw-light collapsed text-decoration-none" href=""
                         data-bs-toggle="collapse" data-bs-target="#collapse-payments" aria-controls="collapse-payments">
-                        <span class="material-symbols-outlined me-2 fw-light text-secondary">
+                        <span class="material-symbols-outlined me-2 fw-light text-white-50">
                             payments
                         </span>
                         Financeiro
@@ -121,10 +121,10 @@
             <!-- ACCORDION ITEM -->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <a class="accordion-button fs-6 fw-light collapsed text-decoration-none" href=""
+                    <a class="accordion-button bg-smart-subtle text-white-50 fs-6 fw-light collapsed text-decoration-none" href=""
                         data-bs-toggle="collapse" data-bs-target="#collapse-reports" aria-controls="collapse-reports">
-                        <span class="material-symbols-outlined me-2 fw-light text-secondary">
-                            location_city
+                        <span class="material-symbols-outlined me-2 fw-light text-white-50">
+                            description
                         </span>
                         Relatórios
                     </a>
