refactor: layout installments list

--- a/debits/templates/lot/list.html
+++ b/debits/templates/lot/list.html
@@ -100,7 +100,7 @@
                             <span class="material-symbols-outlined fill-icon fs-5">
                                 error
                             </span>
-                            {{object.costumer_total_debt}}
+                            {{object.customer_total_debt}}
                         </div>
                         {% endif %}
 
