--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -12,7 +12,7 @@
             <!-- ACCORDION ITEM -->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <a class="accordion-button bg-smart-subtle text-white-50 fs-6 fw-light collapsed text-decoration-none" href=""
+                    <a class="accordion-button bg-smart-subtle text-white fs-6 fw-light collapsed text-decoration-none" href=""
                         data-bs-toggle="collapse" data-bs-target="#collapse-debits" aria-controls="collapse-debits">
                         <span class="material-symbols-outlined me-2 fw-light text-white-50">
                             location_city
@@ -46,7 +46,7 @@
             <!-- ACCORDION ITEM -->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <a class="accordion-button bg-smart-subtle text-white-50 fs-6 fw-light collapsed text-decoration-none" href=""
+                    <a class="accordion-button bg-smart-subtle text-white fs-6 fw-light collapsed text-decoration-none" href=""
                         data-bs-toggle="collapse" data-bs-target="#collapse-customers"
                         aria-controls="collapse-customers">
                         <span class="material-symbols-outlined me-2 fw-light text-white-50">
@@ -75,7 +75,7 @@
             <!-- ACCORDION ITEM -->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <a class="accordion-button bg-smart-subtle text-white-50 fs-6 fw-light collapsed text-decoration-none" href=""
+                    <a class="accordion-button bg-smart-subtle text-white fs-6 fw-light collapsed text-decoration-none" href=""
                         data-bs-toggle="collapse" data-bs-target="#collapse-payments" aria-controls="collapse-payments">
                         <span class="material-symbols-outlined me-2 fw-light text-white-50">
                             payments
@@ -121,7 +121,7 @@
             <!-- ACCORDION ITEM -->
             <div class="accordion-item">
                 <div class="accordion-header">
-                    <a class="accordion-button bg-smart-subtle text-white-50 fs-6 fw-light collapsed text-decoration-none" href=""
+                    <a class="accordion-button bg-smart-subtle text-white fs-6 fw-light collapsed text-decoration-none" href=""
                         data-bs-toggle="collapse" data-bs-target="#collapse-reports" aria-controls="collapse-reports">
                         <span class="material-symbols-outlined me-2 fw-light text-white-50">
                             description
