--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,12 +6,12 @@ GENERAL STYLE
     font-family: "Nunito Sans", sans-serif;
 }
 
-body{
-    font-size: 14px;
+body {
+    font-size: 13px !important;
 }
 
 .fill-icon {
-    font-variation-settings: 'FILL'1;
+    font-variation-settings: 'FILL' 1;
 }
 
 .card-smart {
@@ -22,36 +22,58 @@ body{
     margin: 15px;
 }
 
-.text-smart{
+.text-smart {
     color: #6702B4 !important;
 }
 
-.bg-smart{
+.bg-smart {
     background-color: #6702B4 !important;
 }
 
-.bg-smart-subtle{
+.bg-smart-subtle {
     background-color: #031633 !important;
 }
-.fs-6{
-    font-size: 14px !important;
+
+.fs-6 {
+    font-size: 13px !important;
 }
-.fs-7{
-    font-size: 11px;
+
+.fs-7 {
+    font-size: 10px;
 }
 
 /* ------------------
 BUTTONS STYLE 
 -------------------*/
+.btn {
+    border-radius: 2em !important;
+    display: flex;
+    align-items: center;
+}
 
 .btn-smart {
     background-color: #6702B4 !important;
     padding: 8px 30px !important;
     color: #FFFF !important;
-    font-weight: 700;
-    border-radius: 0.3em !important;
+    font-weight: 600;
+    border-radius: 2em !important;
     font-size: 14px !important;
     border: 0 !important;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    justify-content: center;
+}
+
+.btn-smart-sm {
+    padding: 0px 15px !important;
+    color: #6702B4 !important;
+    font-weight: 600;
+    border-radius: 2em !important;
+    font-size: 12px !important;
+    border: 1px  solid #6702B4;
+    display: flex;
+    align-items: center;
     text-decoration: none;
 }
 
@@ -59,8 +81,14 @@ BUTTONS STYLE
     background-color: #6702B4 !important;
 }
 
+.btn-smart-sm:hover {
+    background-color: #6702B4 !important;
+    color: #FFFF !important;
+}
+
+
 .accordion-button::after {
-   filter: invert(1); 
+    filter: invert(1);
 
 }
 
@@ -69,7 +97,7 @@ BUTTONS STYLE
 FORMS STYLE 
 -------------------*/
 
-.btn{
+.btn {
     font-size: 14px !important;
 }
 
