feat: create installments of sales contract

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,6 +49,7 @@ BUTTONS STYLE
     border-radius: 2em !important;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .btn-smart {
