--- a/debits/templates/lot/list.html
+++ b/debits/templates/lot/list.html
@@ -14,8 +14,8 @@
             Lotes listagem
         </p>
     </div>
-    <div>
-        <a href="{% url 'lot_create' enterprise.id %}" class="btn btn-smart" style="width: 150px;">
+    <div class="d-flex">
+        <a href="{% url 'lot_create' enterprise.id %}" class="btn btn-smart me-2" style="width: 150px;">
             Novo
         </a>
         <a href="{% url 'sales_contract_upload' enterprise.id %}" class="btn btn-outline-dark">
